--- a/project.yml
+++ b/project.yml
@@ -42,6 +42,8 @@ targets:
       CLANG_ENABLE_MODULES: true
       SWIFT_INSTALL_OBJC_HEADER: false
       BUILD_LIBRARY_FOR_DISTRIBUTION: true
+      SWIFT_ENABLE_LIBRARY_EVOLUTION: true
+      SWIFT_COMPILATION_MODE: "wholemodule"
       SKIP_INSTALL: false
       DEFINES_MODULE: false
     info:
